clusters/homelab/apps/hd-stream/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hd-stream
  namespace: hd-stream
spec:
  selector:
    app: hd-stream
  ports:
    - name: http
      port: 80
      targetPort: 3000
